xForwardedFor/manifests/11-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xff-demo-gateway
  namespace: ${NAMESPACE}
  labels:
    istio: xff-demo-gateway
spec:
  selector:
    istio: xff-demo-gateway
  ports:
    - name: http2
      port: 80
      targetPort: 8080
