xForwardedFor/manifests/32-echo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: ${NAMESPACE}
  labels:
    app: echo
spec:
  selector:
    app: echo
  ports:
    - name: http
      port: 80
      targetPort: 8080
